# market-ontology

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  claude-code-review.yml  symphony-gate.yml
causal_dag_v1/: __init__.py  edges.py  nodes.py  validate.py
causal_dag_v1/kg_seed/: causes.jsonl  (+2 more)
docs/: PROV-O.md  REPO_INDEX.md  REPO_MAP.md  accepted-state-cross-repo-smoke.md  accepted-state-spine.md  agent-harness.md  agent-observability.md  agent-routing.md  architecture.html  causal_projection_library_grounding.md  contract-drift-smoke-marker.json  symphony_provider_contract.json  system-map.html
poc_v1/: MIGRATION.md  README.md  v2_spec.md
scripts/: check-doc-rot.sh  check_accepted_state_spine.py  generate_kg_seed_contract.py  generate_repo_index.py  generate_repo_map.py  generate_trustgraph_ontology.py  generate_twenty_app.py  validate_causal_dag.py  validate_causal_projection.py  validate_kg_seed.py
tests/: test_accepted_state_spine_contract.py  test_agent_harness_contract.py  test_causal_dag_v1.py  test_causal_projection_contracts.py  test_generate_twenty_app.py  test_glossary.py  test_graphiti_views.py  test_identity.py  test_iri.py  test_prov_lineage.py  test_repair_loop_proof.py  test_repo_index.py  test_repo_map.py  test_repo_portability.py  test_seeded_symphony_repair.py  test_store_and_super_ego_projection.py  test_symphony_provider_contract.py  test_trustgraph_ontology.py  test_twenty_projection_manifest.py  test_validate_causal_projection.py  test_validate_kg_seed.py  test_wandb_ontology_loop_contract.py
(+77 files in other folders)
